# shadow_tech_test

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_api.sh
src/: bootstrap_database_schema.py
src/api/: authors.py  books.py  config.py  lending.py  main.py  user.py
src/authentication/: utils.py
src/database/: common.py  models.py
src/schemas/: books.py  lending.py  user.py
tests/: conftest.py  test_authors.py  test_books.py  test_lending.py  test_user.py
